; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/dream/qdsp5/extr_audio_in.c_convert_dsp_samp_index.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/dream/qdsp5/extr_audio_in.c_convert_dsp_samp_index.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AUDREC_CMD_SAMP_RATE_INDX_48000 = common dso_local global i32 0, align 4
@AUDREC_CMD_SAMP_RATE_INDX_44100 = common dso_local global i32 0, align 4
@AUDREC_CMD_SAMP_RATE_INDX_32000 = common dso_local global i32 0, align 4
@AUDREC_CMD_SAMP_RATE_INDX_24000 = common dso_local global i32 0, align 4
@AUDREC_CMD_SAMP_RATE_INDX_22050 = common dso_local global i32 0, align 4
@AUDREC_CMD_SAMP_RATE_INDX_16000 = common dso_local global i32 0, align 4
@AUDREC_CMD_SAMP_RATE_INDX_12000 = common dso_local global i32 0, align 4
@AUDREC_CMD_SAMP_RATE_INDX_11025 = common dso_local global i32 0, align 4
@AUDREC_CMD_SAMP_RATE_INDX_8000 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @convert_dsp_samp_index to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @convert_dsp_samp_index(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %23 [
    i32 48000, label %5
    i32 44100, label %7
    i32 32000, label %9
    i32 24000, label %11
    i32 22050, label %13
    i32 16000, label %15
    i32 12000, label %17
    i32 11025, label %19
    i32 8000, label %21
  ]

5:                                                ; preds = %1
  %6 = load i32, i32* @AUDREC_CMD_SAMP_RATE_INDX_48000, align 4
  store i32 %6, i32* %2, align 4
  br label %25

7:                                                ; preds = %1
  %8 = load i32, i32* @AUDREC_CMD_SAMP_RATE_INDX_44100, align 4
  store i32 %8, i32* %2, align 4
  br label %25

9:                                                ; preds = %1
  %10 = load i32, i32* @AUDREC_CMD_SAMP_RATE_INDX_32000, align 4
  store i32 %10, i32* %2, align 4
  br label %25

11:                                               ; preds = %1
  %12 = load i32, i32* @AUDREC_CMD_SAMP_RATE_INDX_24000, align 4
  store i32 %12, i32* %2, align 4
  br label %25

13:                                               ; preds = %1
  %14 = load i32, i32* @AUDREC_CMD_SAMP_RATE_INDX_22050, align 4
  store i32 %14, i32* %2, align 4
  br label %25

15:                                               ; preds = %1
  %16 = load i32, i32* @AUDREC_CMD_SAMP_RATE_INDX_16000, align 4
  store i32 %16, i32* %2, align 4
  br label %25

17:                                               ; preds = %1
  %18 = load i32, i32* @AUDREC_CMD_SAMP_RATE_INDX_12000, align 4
  store i32 %18, i32* %2, align 4
  br label %25

19:                                               ; preds = %1
  %20 = load i32, i32* @AUDREC_CMD_SAMP_RATE_INDX_11025, align 4
  store i32 %20, i32* %2, align 4
  br label %25

21:                                               ; preds = %1
  %22 = load i32, i32* @AUDREC_CMD_SAMP_RATE_INDX_8000, align 4
  store i32 %22, i32* %2, align 4
  br label %25

23:                                               ; preds = %1
  %24 = load i32, i32* @AUDREC_CMD_SAMP_RATE_INDX_11025, align 4
  store i32 %24, i32* %2, align 4
  br label %25

25:                                               ; preds = %23, %21, %19, %17, %15, %13, %11, %9, %7, %5
  %26 = load i32, i32* %2, align 4
  ret i32 %26
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
